use usercontext instead of param for options route
